# aladdin-python-sdk

./: LICENSE  Pipfile  README.md  pyproject.toml
src/aladdin_sdk/: model.py
src/genie_partner_sdk/: __init__.py  auth.py  client.py  model.py
