[project]
name = "genie_partner_sdk"
version = "1.0.5"
authors = [
    { name="Adam Johnston", email="adam_johnston@geniecompany.com" },
]
description = "An SDK to interact with the AladdinConnect (or OHD) partner API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/genie-garage/aladdin-python-sdk"
Issues = "https://github.com/genie-garage/aladdin-python-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
